fix smart brain